chore: fix docs layout overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,9 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 html {
   background: var(--kui-color-bg);
   color: var(--kui-color-text);
